--- a/styles/islands.css
+++ b/styles/islands.css
@@ -1,118 +1,118 @@
 :root {
-    --green: #074817 ;
-    --white: #ffffff;
+    --blue:#11467D;
+    --green:#4C7335 ;
+    --white:#ffffff;
     font-family: 'Raleway', sans-serif;
+    color:var(--blue);
 }
-body, header, main, section, footer, article, aside {
-    margin: 0px;
-    padding: 0px;
+body, header, main, footer, section, article, aside {
+    margin:0px;
+    padding:0px;
     box-sizing: border-box;
-    font-size: 16px;
-    
+    font-size:16px;
 }
+
 main, header, nav ul, footer {
     display: grid;
-    grid-template-columns: auto auto auto;
-    background-color: lightblue;
+    grid-template-columns: 33% 33% 33%;
+    /* background-color: lightgray; */
 }
 
 main section {
-    border: solid;
+    border:solid white 1px;
     text-align: center;
-    padding: 20px;
-    height: 400px;
+    padding:20px;
 }
 
-/* following classes will govern the sections and make them work within the grind*/
-
-.item1 {
+/* the following classes will govern the sections and make them work within the grid */
+.item1, .item8 {
     grid-column-start: 1;
     grid-column-end: 3;
-}
-.item7 {
-    grid-column-start: 2;
-    grid-column-end: 4;
 }
 .item6 {
     grid-column-start: 1;
     grid-column-end: 2;
 }
-.pics6 {
-    background-image: url(../images/sj-067.jpg);
-    background-repeat: no-repeat;
+.pic6, .pic4, .pic2 {
+    background-image: url(../images/sj-011.jpg);
     background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     height: 200px;
 }
-.pics4 {
-    background-image: url(../images/sj-009.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 200px;
+.pic2 {
+    background-image: url(../images/sj-031.jpg);
 }
-
-.pics2 {
-    background-image: url(../images/sj-003.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 200px;
+.pic4 {
+    background-image: url(../images/sj-039.jpg);
 }
-
-.item8, .item9, .item10, .hero-orcas {
+.item7 {
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+.item9, .hero-orcas {
     grid-column-start: 1;
     grid-column-end: 4;
-    text-align: center;
 }
+
+/* styling elements */
+
 header {
     background-color: var(--white);
     text-align: center;
 }
-header a, header p, nav a {
-    color: lightgrey;
+.logo1 {
+    height: 100px;
+    width: auto;
+    margin: 10px auto;
+}
+header a, header p, nav a, label {
+    color:var(--blue);
     text-decoration: none;
 }
 .hero-orcas, main section {
+    background-image: url(../images/sj-034.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-}
-.hero-orcas {
-    background-image: url(../images/sj-050.jpg);
+    height: 200px;
 }
 h1 {
     color: var(--white);
     text-transform: uppercase;
-    text-shadow: var(--green) 3px 3px 3px;
-
-}
-nav ul li {
-    list-style-type: none;
-    text-align: center;
-    height: 100px;
-
+    text-shadow: #074817 3px 3px 3px;
 }
 nav ul {
-    background-color: var(--white);
+    background-color:var(--white);
+}
+nav ul li {
+    list-style-type:none;
+    text-align: center;
+    height: 100px;
 }
 nav ul li:hover {
-    background-color: lightgrey;
+    background-color:var(--green);
+    color:var(--white);
 }
-
+main section {
+    height: 400px;
+}
 .item1 {
-    background-image: url(../images/sj-041.jpg);
+    background-image: url(../images/sj-015.jpg);
 }
-
 .item3 {
-background-image: url(../images/sj-010.jpg);
+    background-image: url(../images/sj-025.jpg);
 }
-
 .item5 {
-    background-image: url(../images/sj-065.jpg);
+    background-image: url(../images/sj-068.jpg);
 }
-
 .item7 {
-    background-image: url(../images/sj-050.jpg);
+    background-image: url(../images/sj-022.jpg);
+}
+.item2, .item4, .item6 {
+    background-image: none;
 }
 
+footer {
+    padding: 5px;
+}
