--- a/styles/theater-mobile.css
+++ b/styles/theater-mobile.css
@@ -1,19 +1,14 @@
-/* Default styles for the page */
-body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #ffffff; 
-}
-
-/* Media query for screens with a max-width of 1080px */
-@media screen and (max-width: 1080px) {
-    body {
-        background-color: #add8e6; 
+@media screen and (max-width:880px) {
+    main, footer {
+      display: block;
     }
-}
-
-/* Media query for screens with a max-width of 580px */
-@media screen and (max-width: 580px) {
-    body {
-        background-color: #ffb6c1; 
+  
+    article, ul {
+      width: 95%;
     }
-}
+
+    h1 {
+        font-size: 2.5em;
+      }
+      
+  }
