--- a/styles/islands.css
+++ b/styles/islands.css
@@ -12,6 +12,10 @@ body, header, main, footer, section, article, aside {
     font-size:16px;
 }
 
+body {
+    background-color: aquamarine;
+}
+
 main, header, nav ul, footer {
     display: grid;
     grid-template-columns: 33% 33% 33%;
